// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert-below insert row at the bottom of the 4x4 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Lorem ipsum....",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "colspan": "4",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "0",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "1",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "2",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "3",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "rowspan": 3,
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "4",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "5",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "6",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "7",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "8",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "9",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "10",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row at the bottom of the 4x4 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum....</p><table><tbody><tr><td colSpan=\\"4\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td rowspan=\\"3\\" style=\\"width:200px\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row at the top of the 4x4 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Lorem ipsum....",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "colspan": "4",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "0",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "1",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "2",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "3",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "rowspan": 3,
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "4",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "5",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "6",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "7",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "8",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "9",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "10",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row at the top of the 4x4 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum....</p><table><tbody><tr><td colSpan=\\"4\\" style=\\"width:auto\\"></td></tr><tr><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td></tr><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td rowspan=\\"3\\" style=\\"width:200px\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row to bottom of 2X2 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Lorem ipsum ...",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "0",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "1",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "2",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "3",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row to bottom of 2X2 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum ...</p><table><tbody><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td></tr><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td></tr><tr><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td></tr></tbody></table>"`;

exports[`insert-below insert row to top of 2X2 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Lorem ipsum ...",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "0",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "1",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "15",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "2",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "marks": Array [],
                        "object": "text",
                        "text": "3",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`insert-below insert row to top of 2X2 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum ...</p><table><tbody><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td></tr><tr><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td></tr><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td></tr></tbody></table>"`;
